crates/dsrs-macros/tests/ui/missing_output.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct MissingOutput {
    #[input]
    question: String,
}

fn main() {}
